fix: layout issues on profile

--- a/src/common/components/post-header/styles.module.css
+++ b/src/common/components/post-header/styles.module.css
@@ -5,6 +5,7 @@
   grid-template-rows: 1.5rem 1.5rem;
   grid-column-gap: 0.5rem;
   align-items: center;
+  cursor: pointer;
 }
 
 .header * {
