--- a/src/modules/users/profile/styles.module.css
+++ b/src/modules/users/profile/styles.module.css
@@ -1,26 +1,32 @@
 .profile {
   display: grid;
-  grid-column-gap: 0.5rem;
+  grid-gap: 0.5rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas:
     ". avatar ."
     "name name name"
     "info info info"
     "start middle end";
-  align-items: end;
   padding: 0.5rem;
 }
 
 .header {
-  position: absolute;
-  z-index: -1;
   height: 4rem;
-  width: 100vw;
+  width: 100%;
+  margin-bottom: -4rem;
+  background-color: lightgray;
+}
+
+.header img {
+  height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
 .avatar {
   grid-area: avatar;
+  height: 4rem;
+  text-align: center;
 }
 
 .name {
@@ -28,10 +34,13 @@
   text-align: center;
 }
 
-.name h1 {
-  font-size: 1.5rem;
-  line-height: 1.5rem;
-  margin: 0;
+.name h2 {
+  display: inline-block;
+  margin-top: 0;
+}
+
+.name small {
+  display: inline-block;
 }
 
 .info {
